Fix description covers page numbers

--- a/src/app.css
+++ b/src/app.css
@@ -71,10 +71,12 @@ html body {
     -moz-box-shadow: 0px 3px 3px 0px rgba(128,128,128,0.4);
     box-shadow: 0px 3px 3px 0px rgba(128,128,128,0.4);
     z-index: 11;
+    background-color: #FFFF;
 }
 
 .fl-shadow-top {
     -webkit-box-shadow: 0px -3px 3px 0px rgba(128,128,128,0.4);
     -moz-box-shadow: 0px -3px 3px 0px rgba(128,128,128,0.4);
     box-shadow: 0px -3px 3px 0px rgba(128,128,128,0.4);
+    background-color: #FFFF;
 }
